# digital-rule-engine-api-unofficial

./: .gitignore  Dockerfile  Makefile  README.md  install.sh  pyproject.toml
shared_base/: requirements.txt
src/app/: main.py
src/app/model/: campaign.py  line_item.py
src/app/router/: rules_engine_api.py
src/app/utils/: rules_performance_metrics.py  rules_runner.py
src/shared_utils/: base_app.py  big_query_db.py  config.py  create_populate_data_model.sql  db_manager.py  decorator_handler.py  local_db.py  response_handler.py  rules_config.db  utils.py
